# fastapi-template

./: .env  .gitignore  README.md  TODO.md  pyproject.toml
app/: main.py
app/adapter/controller/: rest_user_controller.py  user_controller.py
app/adapter/exception/: exception_handler.py
app/adapter/middleware/: auth_middleware.py  user_context.py
app/api/: users.py
app/application/schemas/: base_response.py  user_schema.py
app/core/: db_config.py
app/db/: user_dao.py
app/domain/: UserEntity.py  rest_user_client.py  rest_user_client_impl.py
app/domain/entity/: gender.py  user_entity.py
app/domain/exception/: base_exception.py  error_code.py
app/domain/remote/: rest_user_client.py
app/domain/repository/: user_repository.py
app/infrastructure/: rest_user_client_impl.py
app/infrastructure/common/: httpx_client_singleton.py  logging_config.py  remote_url_config.py  tortoise_orm_config.py
app/infrastructure/core/: db_config.py  rest_user_config.py
app/infrastructure/db/: user_dao.py
app/infrastructure/persistence/dao/: user_dao.py
app/infrastructure/persistence/models/: user_model.py
app/infrastructure/persistence/repository/: user_repository_impl.py
app/infrastructure/remote/: rest_user_client_impl.py
app/models/: user.py
app/schemas/: user.py
app/web/controller/: rest_user_controller.py  user_controller.py
tests/adapter/controller/: json_encode.py  test_mock_user_controller.py  test_user_controller.py
